# py-json-logger

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_json_logger/: __init__.py
tests/: test_json_logger.py
