[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-json-logger"
version = "0.1.1"
description = "Drop-in structured JSON logging for Python using the stdlib logging module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["logging", "json", "structured", "structured-logging", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-json-logger"
Repository = "https://github.com/philiprehberger/py-json-logger"
Issues = "https://github.com/philiprehberger/py-json-logger/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_json_logger"]
